20120507 ui/win32/win32ui.c: fix win32 problem with closing modal dialogs
         (bug #3516228) (Sergio).
20120507 ui/gtk/{binary.c,browse.c,confirm.c,debugger.c,gtkjoystick.c,gtkui.c,
         memory.c,options.pl,picture.c,pokefinder.c,pokemem.c,rollback.c,roms.c,
         stock.c}: don't access GtkDialog's vbox and action_area directly
         (patch #3518505) (Alberto Garcia).
20120507 ui/gtk/gtkui.c: fix regression in GTK UI pause menu from r4685
         (bug #3523741) (Sergio).
20120521 ui/gtk/{binary.c,browse.c,debugger.c,gtkjoystick.c,memory.c,options.pl,
         pokefinder.c,rollback.c}: replace deprecated
         gtk_box_pack_start_defaults() with gtk_box_pack_start() (part of patch
         #3527406) (Sergio).
20120521 ui/gtk/statusbar.c: replace deprecated gtk_label_set() with
         gtk_label_set_text() (part of patch #3527406) (Sergio).
20120521 ui/gtk/{pokefinder.c,debugger.c,browse.c}: replace deprecated
         gtk_widget_hide_all() with gtk_widget_hide() (more of patch #3527406)
         (Sergio).
20120521 ui/gtk/{picture.c,pokefinder.c,pokemem.c,roms.c}: replace deprecated
         gtk_box_pack_start_defaults() with gtk_box_pack_start() (rest of patch
         #3527406) (Sergio).
20120521 machine.c: revert change from patch #3496134 so that microdrive
         activity icon is only shown when microdrives are used in GTK+ and Win32
         UIs (thanks, Sergio).
20120525 ui/xlib/{xdisplay.c,xstatusbar.pl}: scale the statusbar icons with the
         main display (more from patch #3496134) (Gergely Szasz).
20120525 ui/gtk/{browse.c,gtkinternals.h,gtkui.c,memory.c,pixmaps.c,
         pokefinder.c,rollback.c}: replace deprecated GtkCList with GtkTreeView
         (patch #3529236) (Sergio).
20120605 ui/gtk/debugger.c: replace deprecated GtkItemFactory,
         GtkItemFactoryEntry and GtkItemFactoryCallback1 in favour of
         GtkUIManager, GtkActionEntry and GtkAction (patch #3531492) (Sergio).